# xhy2

./: .gitattributes  .gitignore  .rosinstall  CLAUDE.md  Instruction.md  README.md  debug_data0729-1.csv  debug_data260530-1.csv  edited_ui_controller.py
build_isolated/: catkin_make_isolated.cache
build_isolated/cv_bridge/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/cv_bridge/catkin_generated/: generate_cached_setup.py  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  python_distutils_install.sh  safe_execute_install.cmake  setup_cached.sh
build_isolated/cv_bridge/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/cv_bridge/python/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/cv_bridge/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/cv_bridge/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
camera/: ost_air.txt  ost_new_camera_air.txt  ost_new_camera_water_1920.txt  ost_new_camera_water_640.txt  ost_new_camera_water_640_0727.txt  ost_water.txt
cameras/: ost_new_camera_water_0807.txt  ost_new_camera_water_0811.txt
devel_isolated/cv_bridge/: .catkin  .rosinstall  local_setup.sh  setup.sh
local_test/aruco/: PnP_v1.py  create_aruco.py  euler_cvt.py  splitImage.py
local_test/best_thre/: test.py  test2.py  test3.py
local_test/calculate_depth/: calculate_depth_v2.py
local_test/model_convertion/: pt2onnx.py
src/: Commands.txt  commond.txt
src/auv_control/: CMakeLists.txt  package.xml
src/auv_control/config/: auv_tf.yaml  motion_supervisor.yaml  task1_v3_python_logging.conf
src/auv_control/deprecated/: begin.launch  debug_driver.py  param.launch  sensor_driver_v2.py  task3_node.py  task4_node.py  ui_controller.py
src/auv_control/docs/: motion_supervisor_prototype.md  motion_supervisor_task_interface.md  task3_subtask1_motion_supervisor_logic.md  task3_subtask1_subtask3_test_guide.md  task3_subtasks_logic.md
src/auv_control/driver/: auv_tf_handler.py  debug_driver.py  debug_driver_v2.py  debug_protocol.py  lever_arm.py  map_initer.py  motion_supervisor.py  motion_supervisor_core.py  nav_driver.py  sensor_actuator_node.py  sensor_status_node.py  static_tf_broadcaster.py  world_frame.py  world_origin_reset.py
src/auv_control/launch/: begin.launch  data_collection.launch  motion_axis_auto_test.launch  motion_effectiveness_calibration_test.launch  motion_supervisor_prototype.launch  motion_x_auto_test.launch  motion_y_auto_test.launch  motion_yaw_auto_test.launch  motion_yaw_continuous_test.launch  param.launch  param2.launch  param_competition.launch  param_final.launch  param_test.launch  reset_world_origin.launch  rotation_center_calibration.launch  rotation_center_continuous_calibration.launch  save.launch  static_tf.launch  task1_v2.launch  task1_v2_black_test_launch.launch  task1_v2_line_test_launch.launch  task1_v2_test_black_marker.launch  task1_v2_test_launch.launch  task1_v2_test_line_fitting.launch  task1_v2_test_line_follow.launch  task1_v2_test_los_square.launch  task1_v2_test_yellow_marker.launch  task1_v2_yellow_test_launch.launch  task1_v3.launch  task1_v3_test_black_marker.launch  task1_v3_test_line_fitting.launch  task1_v3_test_line_follow.launch  task1_v3_test_los_square.launch  task1_v3_test_yellow_marker.launch  task3_subtask1_2_3_sequence.launch  task3_subtask1_acquire_area.launch  task3_subtask1_acquire_area_motion.launch  task3_subtask2_3_sequence.launch  task3_subtask2_get_task.launch  (+3 more)
src/auv_control/msg/: AUVControlCmd.msg  AUVData.msg  AUVMotor.msg  AUVPose.msg  AUVSensor.msg  AUVTime.msg  ActuatorControl.msg  ArrowKeypoints.msg  Control.msg  Keyboard.msg  LineDetection.msg  MotionState.msg  NavData.msg  PoseLLAcmd.msg  PoseNEDcmd.msg  SensorStatus.msg  TargetDetection.msg
src/auv_control/scripts/: .vo_nav_fusion.py.swp  auv_tf_handler.py  data_saver.py  debug_driver.py  debug_driver_v2.py  keyboard_control.py  main_driver.py  map_initer.py  nav_driver.py  navigation_utils.py  sensor_actuator_node.py  sensor_driver.py  sensor_driver_v2.py  sensor_status_node.py  state_control.py  static_tf_broadcaster.py  task1_node.py  task1_v2.py  (+16 more)
src/fisheye_camera_driver/: CMakeLists.txt  README.md  package.xml
src/fisheye_camera_driver/config/: driver.yaml  web_test.yaml
src/fisheye_camera_driver/launch/: driver.launch  test_web.launch
src/fisheye_camera_driver/scripts/: rtsp_fisheye_driver.py  web_image_test.py
src/oculus_ros/: CMakeLists.txt
src/oculus_ros/src/: OculusNode.h
src/state_web/: CMakeLists.txt  README.md  package.xml
src/state_web/launch/: state_web.launch
src/state_web/scripts/: state_web_core.py  state_web_node.py
src/state_web/test/: test_state_web_core.py
src/state_web/www/: dashboard.css  dashboard.js  index.html
src/stereo_depth/: CMakeLists.txt  package.xml  readme.md
src/stereo_splitter/: CMakeLists.txt  package.xml
src/vision_web/: CMakeLists.txt  package.xml
src/yolo_bridge/: CMakeLists.txt  package.xml
(+168 files in other folders)
